fix z-index styles and background style

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -12,8 +12,6 @@
 @import "./tokens/spacing.scss";
 @import "./tokens/utilities.scss";
 
-
-
 *{
     box-sizing: border-box;
     margin: 0;
@@ -59,8 +57,9 @@ body, html{
 .mainBackground{
     width: 100%;
     height: 500px;
-    background-color: $gradient;
+    background: $gradient;
     position: absolute;
+    z-index: 1;
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
